# borsuk-ulam

./: .npmrc  README.md  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  types.ts  vite.config.ts
.github/workflows/: deploy.yaml
src/: App.tsx  constants.ts  main.py
src/components/: ControlPanel.tsx  LoadingOverlay.tsx  WeatherGlobe.tsx
static/: style.css
