[project]
name = "borsuk-ulam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cartopy>=0.25.0",
    "geodatasets>=2024.8.0",
    "geopandas>=1.1.1",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "matplotlib-backend-wezterm>=2.1.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
